# Jrl

./: .gitignore  .pylintrc  LICENSE.txt  README.md  lint  main.py  pyproject.toml  pyproject_old.toml  requirements.txt  run_tests  setup.py
benchmarking/: rotational_distance_runtime_comparison.md
data/ground_truth_fk_data/: baxter__joint_angles.npy  baxter__poses.npy  fetch__joint_angles.npy  fetch__poses.npy  iiwa7__poses.npy  panda__joint_angles.npy  panda__poses.npy  panda_arm__poses.npy  panda_arm_stanford__joint_angles.npy  pyproject.toml
jkinpylib/: __init__.py  config.py  conversions.py  evaluation.py  geometry.py  kinematics.py  kinematics_utils.py  math_utils.py  robot.py  robots.py  urdf_utils.py  utils.py
jkinpylib/urdfs/: README.md  fix_urdf.py
jkinpylib/urdfs/baxter/: info.md
jkinpylib/urdfs/fetch/: fetch_formatted.urdf
jkinpylib/urdfs/iiwa7/: iiwa7_formatted.urdf
jkinpylib/urdfs/panda/: panda_arm_hand_formatted.urdf
jkinpylib/urdfs/panda_arm/: panda.urdf  panda_arm_hand.urdf  panda_arm_hand_formatted.urdf
jkinpylib/urdfs/panda_arm2/: README.md
jkinpylib/urdfs/panda_arm_stanford/: panda.urdf  panda_formatted.urdf
jrl/: __init__.py  config.py  deprecated.py  evaluation.py  geometry.py  math_utils.py  meshcat_utils.py  obstacles.py  robot.py  robots.py  testing_utils.py  urdf_utils.py  utils.py  world_model.py
jrl/urdfs/: README.md
jrl/urdfs/baxter/: baxter.urdf
media/: table_test.html
scripts/: batch_ik_covergence_analysis.ipynb  benchmark_collision.py  benchmark_conversions.py  benchmark_fk.py  benchmark_ik.py  benchmark_jacobian.py  benchmark_math_utils.py  benchmark_qp.py  calculate_always_and_never_colliding_links.py  calculate_capsule_approximation.py  calculate_ignorable_link_collision_pairs.py  calculate_rotational_repeatability.py  capsule_approximation.py  conversions_analysis.ipynb  demo.py  explore_qp.ipynb  plot_batch_ik_optimization.py  plot_batch_ik_optimization_step.py  plot_ik_step.py  rerun_example.py  rerun_example_panda.py  robot_capsule_visualization.ipynb  save_ground_truth_fk_data.py  step_size_line_search_experiment.py  visualization_utils.py  visualize_batch_ik_optimization.py  visualize_batch_ik_optimization_step.py  visualize_joints.py  visualize_redundancy.py  visualize_robot.py  visualize_robot_meshcat.py  visualize_robot_meshcat_cp.py
tests/: all_robots.py  batch_ik_test.py  conversions_test.py  evaluation_test.py  forward_kinematics_test.py  geometry_test.py  inverse_kinematic_test.py  inverse_kinematics_test.py  kinematic_chain_test.py  math_utils_test.py  robot_test.py  scratch.py  solution_refinement_test.py  testing_utils.py  urdf_utils_test.py
tests/ground_truth_fk_data/: README.md  cr5__joint_angles.npy  cr5__poses.npy  fetch_arm__joint_angles.npy  fetch_arm__poses.npy  iiwa14__joint_angles.npy  iiwa14__poses.npy  iiwa7__joint_angles.npy  kinova3__joint_angles.npy  kinova3__poses.npy  rizon4__joint_angles.npy  rizon4__poses.npy  sawyer__joint_angles.npy  sawyer__poses.npy  ur10__poses.npy  ur10e__poses.npy  ur16e__poses.npy  ur3__poses.npy  ur3e__poses.npy  ur5__joint_angles.npy  ur5__poses.npy  ur5e__poses.npy  xarm6__joint_angles.npy  xarm6__poses.npy
tests/urdfs/: floating_joint_tester.urdf
(+194 files in other folders)
