[tool.poetry]
name = "jrl"
version = "0.1.1"
description = "Jeremy's Robotics Library"
authors = ["Jeremy Morgan <jsmorgan6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
klampt = "0.9.2"
numpy = "1.24.4"
torch = "2.3.0"
more-itertools = "^9.0.0"
tqdm = "^4.64.1"
warp-lang = "0.10.1"
meshcat = "0.3.2"

[tool.poetry.group.dev.dependencies]
qpth = {git = "https://github.com/locuslab/qpth"}
black = "^23.1.0"
pylint = "^2.16.2"
kinpy = "^0.2.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
python-fcl = "0.7.0.4"
pytest = "^7.4.3"
ipykernel = "^6.28.0"
nbconvert = "^7.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
