[project]
name = "jrl"
version = "0.1.2"
description = "Jeremy's Robotics Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "klampt==0.9.2",
    "matplotlib>=3.10.1",
    "meshcat>=0.3.2",
    "more-itertools>=10.6.0",
    "pandas>=2.2.3",
    "torch>=2.3.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages]
find = { include = ["jrl"], exclude = ["media"] }

[tool.ruff]
line-length = 120
ignore = ["E741"]


# uv run jupyter nbconvert --clear-output scripts/*.ipynb
# uv run ruff check --exclude jrl/deprecated.py
# uv run ruff format --exclude jrl/deprecated.py

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
