[project]
name = "jrl"
version = "0.1.2"
description = "Jeremy's Robotics Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "klampt==0.9.2",
    "matplotlib>=3.10.1",
    "meshcat>=0.3.2",
    "more-itertools>=10.6.0",
    "pandas>=2.2.3",
    "pylint>=3.3.7",
    "pyqt5>=5.15.11",
    "pytest>=8.4.0",
    "robot-descriptions>=1.20.0",
    "torch>=2.3.0",
    "tqdm>=4.67.1",
    "viser>=1.0.6",
]

[tool.setuptools.packages]
find = { include = ["jrl"], exclude = ["media"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
jrl = ["**/*.urdf", "**/*.DAE", "**/*.STL", "**/*.dae", "**/*.stl", "**/*.txt", "**/*.md"]


[tool.ruff]
line-length = 120
lint.ignore = ["E741"]


# uv run jupyter nbconvert --clear-output scripts/*.ipynb
# uv run ruff check --exclude jrl/deprecated.py
# uv run ruff format --exclude jrl/deprecated.py

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "qpth @ git+https://github.com/locuslab/qpth.git",
    "kinpy>=0.2.0",
    "python-fcl>=0.7.0.4",
    "ipykernel>=6.28.0",
    "nbconvert>=7.14.1",
]
